syntax = "proto3";

package detector;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


option go_package = "./api";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Event Processor Detector API";
    };
};

service DetectorController {
    rpc Create(CreateDetectorReq) returns (CreateDetectorResp) {
        option (google.api.http) = {
            post: "/api/v1/detector/event-processor"
            body: "*"
        };
    }
    rpc Delete(DeleteDetectorReq) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/api/v1/detector/event-processor"
        };
    }
    rpc ListPage(ListDetectorPageReq) returns (ListDetectorPageResp)  {
        option (google.api.http) = {
            get: "/api/v1/detector/event-processor/page/{page_num}"
        };
    }
}

message CreateDetectorReq {
    // wasm_base64 is base64-encoded WASM binary
    string wasm_base64 = 1;
}

message Detector {
    string id = 1;
    string name = 2;
    string description = 3;
    uint32 version = 4;
    string author = 5;
    string contact = 6;
    string license = 7;
}

message CreateDetectorResp {
    Detector detector = 1;
}

message DeleteDetectorReq {
    string id = 1;
    uint32 version = 2;
}

message ListDetectorPageReq {
    uint32 page_num = 1;
    uint32 page_size = 2;
    string order = 3;
}

message ListDetectorPageResp {
    repeated Detector detectors = 1;
    uint32 total = 2;
}
